part1/e9/manifests/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: ex9-svc
spec:
  type: ClusterIP
  selector:
    app: ex9
  ports:
  - port: 2345
    protocol: TCP
    targetPort: 3000
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ex9-ingress
  annotations:
    traefik.ingress.kubernetes.io/rule-type: "PathPrefixStrip"
spec:
  rules:
  - http:
      paths:
      - path: /pingpong
        backend:
          serviceName: ex9-svc
          servicePort: 2345
